--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ body{
   background-color:white;
   text-align:center;
   border-style: 4px outset black;
-  border-radius: 8px;
+  border-radius: 2%;
 } 
