--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body{
 }
 
 #stage{
-  height:30%;
-  width:30%;
+  height:auto;
+  width:25%;
   background-color:white;
   text-align:center;
   border-radius:20px;
+  margin:10px 5px;
 } 
