--- a/style.css
+++ b/style.css
@@ -15,5 +15,6 @@ body{
   background-color:white;
   text-align:center;
   border-radius:20px;
-  margin:10px 5px;
+  margin:3% 2.5%;
+  padding:1%;
 } 
