--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body{
   display: inline-block;
 } 
 
+#stage:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2); 
+}
+
 #stage img{
   width:90%;
   height:auto;
