--- a/stage.css
+++ b/stage.css
@@ -15,3 +15,13 @@ body{
 a {
     text-decoration: none !important;
 }
+
+.main{
+  margin-top:20px;
+}
+
+.content{
+  background-color:#e8fff4;
+  width:35%;
+  margin-left:5%;
+}
