--- a/stage.css
+++ b/stage.css
@@ -25,8 +25,9 @@ a {
   width:35%;
   padding:5px;
   margin-left:5%;
+  text-align:center;
 }
 
 .content h1{
-  font-size:2vw;
+  font-size:1.8vw;
 }
