--- a/stage.css
+++ b/stage.css
@@ -32,8 +32,8 @@ a {
   font-size:1.8vw;
 }
 
-.download buttion{
-  background-color: #4281f5;
+.download button{
+  background-color:#4281f5;
   border: none;
   color: white;
   padding: 5px 10px;
@@ -43,4 +43,10 @@ a {
   font-size: 0.9vw;
   margin: 2px;
   cursor: pointer;
+  transition-duration: 0.4s;
+}
+
+.download button:hover{
+  background-color:white;
+  color:#4281f5;
 }
