--- a/stage.css
+++ b/stage.css
@@ -55,3 +55,11 @@ a {
   background-color:white;
   color:#4281f5;
 }
+
+.content{
+  background-color:#e8fff4;
+  width:40%;
+  height:40%;
+  margin-left:5%;
+  text-align:center;
+}
