--- a/stage.css
+++ b/stage.css
@@ -18,6 +18,7 @@ a {
 
 .main{
   margin-top:20px;
+  float:left;
 }
 
 .content{
@@ -26,6 +27,7 @@ a {
   padding:5px;
   margin-left:5%;
   text-align:center;
+  display: inline-block;
 }
 
 .content h1{
@@ -62,6 +64,7 @@ a {
   height:40%;
   margin-left:5%;
   text-align:center;
+  display: inline-block;
 }
 
 .links{
@@ -70,4 +73,5 @@ a {
   height:20%;
   margin-left:10%;
   text-align:center;
+  display: inline-block;
 }
