--- a/stage.css
+++ b/stage.css
@@ -61,8 +61,9 @@ a {
 
 .video{
   background-color:#e8fff4;
-  width:40%;
-  height:40%;
+  width:40vw;
+  height:auto;
+  min-height:20vh;
   margin-left:5%;
   text-align:center;
   display: inline-block;
@@ -70,8 +71,8 @@ a {
 
 .links{
   background-color:#e8fff4;
-  width:80%;
-  height:20%;
+  width:80vw;
+  height:2vh%;
   margin-left:10%;
   text-align:center;
   display: inline-block;
