--- a/stage.css
+++ b/stage.css
@@ -63,7 +63,7 @@ a {
   background-color:#e8fff4;
   width:40vw;
   height:auto;
-  min-height:20vh;
+  min-height:40vh;
   margin-left:5%;
   text-align:center;
   display: inline-block;
@@ -72,7 +72,7 @@ a {
 .links{
   background-color:#e8fff4;
   width:80vw;
-  height:2vh%;
+  height:20vh;
   margin-left:10%;
   text-align:center;
   display: inline-block;
