--- a/stage.css
+++ b/stage.css
@@ -73,6 +73,7 @@ a {
   background-color:#e8fff4;
   width:80vw;
   height:20vh;
+  margin-top:10%;
   margin-left:10%;
   text-align:center;
   display: inline-block;
