--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body{
   background-color: #bbfadc;
   font-family:Noto Sans JP;
+  margin:0px;
+  padding:0px;
 }
 
 a {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
 .header{
@@ -60,5 +62,6 @@ a {
 .footer h3{
   margin-block-start: 0em;
   margin-block-end: 0em;
-
+  color:white;
+  margin-left:1vw;
 }
