--- a/stage.css
+++ b/stage.css
@@ -50,7 +50,7 @@ a{
   padding: 5px 10px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 1.2vw;
   margin: 2px;
   cursor: pointer;
